[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/World/Dungeon/Dungeon_master.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enviroment/Fire_Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemy/Boss/Dark_Lord.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/World/Dungeon/boss_fight.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animations/smoke.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/World_spritesheet_16x16.png" type="Texture" id=6]
[ext_resource path="res://Assets/TextBox/Text_Box.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=3]
resource_name = "dragon_anim"

[sub_resource type="Animation" id=1]
resource_name = "start_boss"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("../gate:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "intro_dialog"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Smoke2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_animation"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../Smoke3")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_animation"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 7.5 )

[node name="Dungeon_9" instance=ExtResource( 1 )]

[node name="boss_fight" type="Node2D" parent="." index="0"]
script = ExtResource( 4 )

[node name="Text_Box_Layer" type="CanvasLayer" parent="boss_fight" index="0"]

[node name="Text_Box" parent="boss_fight/Text_Box_Layer" index="0" instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="boss_fight" index="1"]
autoplay = "start_boss"
anims/dragon_anim = SubResource( 3 )
anims/start_boss = SubResource( 1 )

[node name="Phase_One" type="Timer" parent="boss_fight" index="2"]
one_shot = true

[node name="map_1" parent="." index="2"]
tile_data = PoolIntArray( 0, 12, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 64, 0, 5, 45, 0, 6, 41, 0, 7, 41, 0, 8, 46, 0, 9, 68, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 10, 0, 65536, 42, 0, 65537, 27, 0, 65538, 27, 0, 65539, 27, 0, 65541, 27, 0, 65542, 41, 0, 65543, 41, 0, 65544, 27, 0, 65546, 27, 0, 65547, 27, 0, 65548, 27, 0, 65549, 42, 0, 131072, 42, 0, 131073, 41, 0, 131074, 41, 0, 131075, 41, 0, 131076, 41, 0, 131077, 41, 0, 131078, 41, 0, 131079, 41, 0, 131080, 41, 0, 131081, 41, 0, 131082, 41, 0, 131083, 41, 0, 131084, 41, 0, 131085, 42, 0, 196608, 42, 0, 196609, 41, 0, 196610, 41, 0, 196611, 41, 0, 196612, 41, 0, 196613, 41, 0, 196614, 41, 0, 196615, 41, 0, 196616, 41, 0, 196617, 41, 0, 196618, 41, 0, 196619, 41, 0, 196620, 41, 0, 196621, 42, 0, 262144, 42, 0, 262145, 41, 0, 262146, 41, 0, 262147, 41, 0, 262148, 41, 0, 262149, 41, 0, 262150, 41, 0, 262151, 41, 0, 262152, 41, 0, 262153, 41, 0, 262154, 41, 0, 262155, 41, 0, 262156, 41, 0, 262157, 42, 0, 327680, 42, 0, 327681, 41, 0, 327682, 41, 0, 327683, 41, 0, 327684, 41, 0, 327685, 41, 0, 327686, 41, 0, 327687, 41, 0, 327688, 41, 0, 327689, 41, 0, 327690, 41, 0, 327691, 41, 0, 327692, 41, 0, 327693, 42, 0, 393216, 42, 0, 393217, 41, 0, 393218, 41, 0, 393219, 41, 0, 393220, 41, 0, 393221, 41, 0, 393222, 41, 0, 393223, 41, 0, 393224, 41, 0, 393225, 41, 0, 393226, 41, 0, 393227, 41, 0, 393228, 41, 0, 393229, 42, 0, 458752, 42, 0, 458753, 41, 0, 458754, 41, 0, 458755, 41, 0, 458756, 41, 0, 458757, 41, 0, 458758, 41, 0, 458759, 41, 0, 458760, 41, 0, 458761, 41, 0, 458762, 41, 0, 458763, 41, 0, 458764, 41, 0, 458765, 42, 0, 524288, 53, 0, 524289, 43, 0, 524290, 43, 0, 524291, 43, 0, 524292, 43, 0, 524293, 43, 0, 524294, 43, 0, 524295, 43, 0, 524296, 43, 0, 524297, 43, 0, 524298, 43, 0, 524299, 43, 0, 524300, 43, 0, 524301, 54, 0 )

[node name="Player" parent="." index="3"]
position = Vector2( 111, 23 )

[node name="Fire_Wall" parent="Enviroment/Static" index="0" instance=ExtResource( 2 )]
position = Vector2( 72, 24 )

[node name="Fire_Wall4" parent="Enviroment/Static" index="1" instance=ExtResource( 2 )]
position = Vector2( 152, 24 )

[node name="Dark_Lord" parent="Entities" index="0" instance=ExtResource( 3 )]
position = Vector2( 112, 96 )

[node name="gate" type="KinematicBody2D" parent="." index="7"]
position = Vector2( 104, -3 )

[node name="Sprite" type="Sprite" parent="gate" index="0"]
position = Vector2( 0, 11 )
texture = ExtResource( 6 )
hframes = 9
vframes = 18
frame = 38

[node name="Sprite2" type="Sprite" parent="gate" index="1"]
position = Vector2( 16, 11 )
texture = ExtResource( 6 )
hframes = 9
vframes = 18
frame = 38

[node name="CollisionShape2D" type="CollisionShape2D" parent="gate" index="2"]
position = Vector2( 8, 11.5 )
shape = SubResource( 2 )

[node name="Smoke2" parent="." index="8" instance=ExtResource( 5 )]
position = Vector2( 121, 7 )

[node name="Smoke3" parent="." index="9" instance=ExtResource( 5 )]
position = Vector2( 104, 7 )

[node name="Sword_Points" type="Node2D" parent="." index="11"]

[node name="Movement" type="Node2D" parent="Sword_Points" index="0"]

[node name="Position2D" type="Position2D" parent="Sword_Points/Movement" index="0"]
position = Vector2( -51, -29 )

[node name="Position2D2" type="Position2D" parent="Sword_Points/Movement" index="1"]
position = Vector2( 1, -48 )

[node name="Position2D3" type="Position2D" parent="Sword_Points/Movement" index="2"]
position = Vector2( 43, -56 )

[node name="Position2D4" type="Position2D" parent="Sword_Points/Movement" index="3"]
position = Vector2( 85, -60 )

[node name="Position2D5" type="Position2D" parent="Sword_Points/Movement" index="4"]
position = Vector2( 131, -60 )

[node name="Position2D6" type="Position2D" parent="Sword_Points/Movement" index="5"]
position = Vector2( 183, -56 )

[node name="Position2D7" type="Position2D" parent="Sword_Points/Movement" index="6"]
position = Vector2( 246, -36 )

[node name="Position2D8" type="Position2D" parent="Sword_Points/Movement" index="7"]
position = Vector2( 268, -6 )

[node name="Position2D9" type="Position2D" parent="Sword_Points/Movement" index="8"]
position = Vector2( 220, -49 )

[node name="Position2D10" type="Position2D" parent="Sword_Points/Movement" index="9"]
position = Vector2( -29, 170 )

[node name="Position2D11" type="Position2D" parent="Sword_Points/Movement" index="10"]
position = Vector2( -7, 196 )

[node name="Position2D12" type="Position2D" parent="Sword_Points/Movement" index="11"]
position = Vector2( 56, 208 )

[node name="Position2D13" type="Position2D" parent="Sword_Points/Movement" index="12"]
position = Vector2( 140, 212 )

[node name="Position2D14" type="Position2D" parent="Sword_Points/Movement" index="13"]
position = Vector2( 180, 209 )

[node name="Position2D15" type="Position2D" parent="Sword_Points/Movement" index="14"]
position = Vector2( 229, 194 )

[node name="Position2D16" type="Position2D" parent="Sword_Points/Movement" index="15"]
position = Vector2( 281, 162 )

[node name="Position2D17" type="Position2D" parent="Sword_Points/Movement" index="16"]
position = Vector2( -46, 145 )

[node name="Position2D18" type="Position2D" parent="Sword_Points/Movement" index="17"]
position = Vector2( 102, 214 )

[node name="Spawn_Points" type="Node2D" parent="Sword_Points" index="1"]

[node name="Position2D" type="Position2D" parent="Sword_Points/Spawn_Points" index="0"]
position = Vector2( 48, 80 )

[node name="Position2D2" type="Position2D" parent="Sword_Points/Spawn_Points" index="1"]
position = Vector2( 72, 96 )

[node name="Position2D3" type="Position2D" parent="Sword_Points/Spawn_Points" index="2"]
position = Vector2( 144, 96 )

[node name="Position2D4" type="Position2D" parent="Sword_Points/Spawn_Points" index="3"]
position = Vector2( 184, 80 )

[node name="World_Swords" type="Node2D" parent="." index="12"]

[node name="Flying_Dragon_Points" type="Node2D" parent="." index="13"]

[node name="Left" type="Position2D" parent="Flying_Dragon_Points" index="0"]
position = Vector2( -64, 64 )

[node name="Right" type="Position2D" parent="Flying_Dragon_Points" index="1"]
position = Vector2( 320, 64 )

[node name="Up" type="Position2D" parent="Flying_Dragon_Points" index="2"]
position = Vector2( 112, -64 )

[node name="Down" type="Position2D" parent="Flying_Dragon_Points" index="3"]
position = Vector2( 112, 200 )

[node name="Landing" type="Position2D" parent="Flying_Dragon_Points" index="4"]
position = Vector2( 112, 96 )

[connection signal="on_end_dialog" from="boss_fight/Text_Box_Layer/Text_Box" to="boss_fight" method="_on_Text_Box_on_end_dialog"]
[connection signal="timeout" from="boss_fight/Phase_One" to="boss_fight" method="_on_Phase_One_timeout"]
